changed canonical link

--- a/src/index.html.haml
+++ b/src/index.html.haml
@@ -12,7 +12,7 @@
 		%meta{'http-equiv' => 'X-UA-Compatible', :content => 'IE=edge,chrome=1'}
 		
 		-# descr links
-		%link{:rel => 'canonical', :href => 'http://fpaw.yanot.org'}
+		%link{:rel => 'canonical', :href => 'http://manifest.github.io/fastprot-analyzer-frontend'}
 		%link{:href => 'https://plus.google.com/112726837250790706995', :rel => 'author'}
 		%link{:href => 'https://plus.google.com/101810801003845460090', :rel => 'publisher'}
 		
