changed footer text

--- a/src/index.html.haml
+++ b/src/index.html.haml
@@ -105,9 +105,8 @@
 				.text-center
 					All services provided are "as is" with no express or implied warranty for accuracy or accessibility.
 					%br
-					Built on top of&nbsp;
-					%a{:href => 'https://github.com/manifest/fastprot-analyzer-backend'}> Fast Protocol Analyzer Service
-					&#x2e;
+					%a{:href => 'https://github.com/manifest/fastprot-analyzer-frontend'} Fast Protocol Analyzer Web 
+					is free and open source project.
 					Developed by&nbsp;
 					%a{:href => 'mailto:ae.nesterov@gmail.com'}> Andrei Nesterov
 					&nbsp;&copy; 2013.
